10.3 Executando a atualização da allocation
